# code-mcp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  IMPROVEMENT_PLAN.md  README.md
.github/workflows/: docker.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
scripts/: generate-memories.sh
src/: args.rs  cli.rs  error.rs  gate.rs  limiter.rs  main.rs  memory.rs  reaper.rs  scope.rs  server.rs  tools.rs
src/tools/: cat.rs  common.rs  find.rs  grep.rs  mod.rs  options.rs  response.rs  sinks.rs
