[package]
name = "code-mcp"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/devfire/code-mcp.git"

[dependencies]
rmcp = { version = "0.16.0", features = ["server", "transport-streamable-http-server"] }
tokio = { version = "1.43", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
ignore = "0.4.23"
regex = "1.11"
thiserror = "2.0"
grep-searcher = "0.1.14"
grep-regex = "0.1.13"
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
